# connector-oss

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  prometheus.yml
aapi/: AGENTIC_FLOW.md  BETA_V0_01_CHECKLIST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  LICENSE  MIGRATION.md  QUICKSTART.md  README.md  SECURITY.md  test_aapi.db
aapi/.github/workflows/: ci.yml  release.yml
aapi/crates/aapi-adapters/: Cargo.toml
aapi/crates/aapi-adapters/src/: effect.rs  error.rs  file.rs  http.rs  lib.rs  registry.rs  remote.rs  traits.rs
aapi/crates/aapi-adapters/tests/: file_sandbox.rs  rollback_replay.rs
aapi/crates/aapi-cli/: Cargo.toml
aapi/crates/aapi-cli/src/: main.rs
aapi/crates/aapi-core/: Cargo.toml
aapi/crates/aapi-core/src/: error.rs  lib.rs  sandhi.rs  types.rs  vakya.rs  validation.rs
aapi/crates/aapi-crypto/: Cargo.toml
aapi/crates/aapi-crypto/src/: capability.rs  dsse.rs  error.rs  keys.rs  lib.rs  signing.rs
aapi/crates/aapi-federation/: Cargo.toml
aapi/crates/aapi-federation/src/: capability_verify.rs  error.rs  federated_policy.rs  lib.rs  marketplace.rs  payment.rs  scitt_exchange.rs  tests.rs
aapi/crates/aapi-gateway/: Cargo.toml
aapi/crates/aapi-gateway/src/: error.rs  handlers.rs  lib.rs  middleware.rs  routes.rs  server.rs  state.rs
aapi/crates/aapi-gateway/tests/: gateway_policy_enforcement.rs
aapi/crates/aapi-indexdb/: Cargo.toml
aapi/crates/aapi-indexdb/src/: error.rs  lib.rs  merkle.rs  models.rs  query.rs  store.rs
aapi/crates/aapi-metarules/: Cargo.toml
aapi/crates/aapi-metarules/src/: context.rs  decision.rs  engine.rs  error.rs  lib.rs  rules.rs
aapi/crates/aapi-metarules/tests/: policy_engine.rs
aapi/crates/aapi-pipeline/: Cargo.toml
aapi/crates/aapi-pipeline/src/: error.rs  lib.rs  pipeline.rs  router.rs  saga.rs  tests.rs
aapi/crates/aapi-sdk/: Cargo.toml
aapi/crates/aapi-sdk/src/: builder.rs  client.rs  error.rs  lib.rs
aapi/preplanning/: archecture.md  engineering.md  resherch.md  why_aapi.md
aapi/scripts/: demo.sh  quickstart.sh
aapi/sdks/python/: CHANGELOG.md  README.md  pyproject.toml
aapi/sdks/python/aapi/: __init__.py  builder.py  client.py  crypto.py  langchain.py  merkle.py  models.py
aapi/sdks/python/examples/: basic_usage.py  langchain_agent.py  vakya_grammar.py
connector/: Cargo.toml
connector/crates/connector-api/: Cargo.toml
connector/crates/connector-api/src/: agent.rs  auto_detect.rs  config.rs  config_tests.rs  config_tests_ext.rs  connect.rs  connector.rs  data.rs  db.rs  display.rs  error.rs  lib.rs  observe.rs  pipeline.rs  security.rs  shorthand.rs  trace.rs  types.rs
connector/crates/connector-caps/: Cargo.toml
connector/crates/connector-caps/src/: capability.rs  contract.rs  device.rs  error.rs  journal.rs  lib.rs  policy.rs  postcondition.rs  runner.rs  sandbox.rs  token.rs  verify.rs
connector/crates/connector-engine/: Cargo.toml
connector/crates/connector-engine/src/: aapi.rs  action.rs  action_tests.rs  adaptive_router.rs  adaptive_threshold.rs  agent_index.rs  auto_derive.rs  auto_vakya.rs  behavior.rs  bft_consensus.rs  binding.rs  checkpoint.rs  circuit_breaker.rs  claims.rs  compliance.rs  content_guard.rs  context_manager.rs  cross_cell_port.rs  discovery.rs  dispatcher.rs  engine_store.rs  error.rs  escrow.rs  fips_crypto.rs  firewall.rs  firewall_events.rs  formal_verify.rs  gateway_bridge.rs  global_quota.rs  grounding.rs  guard_pipeline.rs  instruction.rs  judgment.rs  kernel_ops.rs  knowledge.rs  l6_integration.rs  lib.rs  llm.rs  llm_router.rs  logic.rs  (+25 more)
connector/crates/connector-protocol/: Cargo.toml
connector/crates/connector-protocol/src/: attestation.rs  capability.rs  channel.rs  consensus.rs  envelope.rs  error.rs  identity.rs  intent.rs  lib.rs  routing.rs  safety.rs  telemetry.rs
connector/crates/connector-protocols/: Cargo.toml
connector/crates/connector-protocols/src/: a2a_bridge.rs  acp_bridge.rs  anp_bridge.rs  ap2_bridge.rs  error.rs  lib.rs  mcp_client.rs  mcp_server.rs
connector/crates/connector-server/: Cargo.toml
connector/crates/connector-server/src/: main.rs  metrics.rs  routes.rs
sdks/python/: README.md  pyproject.toml
sdks/python/connector/: __init__.py  config.py
sdks/python/connector_oss/: __init__.py
sdks/typescript/native/: Cargo.toml
sdks/typescript/native/src/: lib.rs
vac/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
vac/crates/vac-bus/: Cargo.toml
vac/crates/vac-bus/src/: error.rs  in_process.rs  lib.rs  nats_bus.rs  tests.rs  traits.rs  types.rs
vac/crates/vac-bus/tests/: nats_integration.rs
vac/crates/vac-cluster/: Cargo.toml
vac/crates/vac-cluster/src/: cell.rs  cluster_store.rs  error.rs  lib.rs  membership.rs  receiver.rs  tests.rs
vac/crates/vac-core/: Cargo.toml
vac/crates/vac-core/src/: adaptive_scheduler.rs  audit_export.rs  cgroup_controllers.rs  cid.rs  codec.rs  error.rs  extensions.rs  guard.rs  integration.rs  interference.rs  kernel.rs  knot.rs  lib.rs  namespace_types.rs  port_security.rs  range_window.rs  self_healing.rs  store.rs  types.rs
vac/crates/vac-crypto/: Cargo.toml
vac/crates/vac-crypto/src/: keys.rs  lib.rs  signing.rs
vac/crates/vac-ffi/: Cargo.toml  pyproject.toml
vac/crates/vac-ffi/src/: lib.rs
vac/crates/vac-prolly/: Cargo.toml
vac/crates/vac-prolly/src/: boundary.rs  lib.rs  node.rs  proof.rs  tree.rs
vac/crates/vac-red/: Cargo.toml
vac/crates/vac-red/src/: displacement.rs  entropy.rs  lib.rs  vector.rs
vac/crates/vac-replicate/: Cargo.toml
vac/crates/vac-replicate/src/: error.rs  lib.rs  merkle_sync.rs  peer.rs  (+1 more)
vac/crates/vac-route/: Cargo.toml
vac/crates/vac-store/: Cargo.toml
vac/crates/vac-sync/: Cargo.toml
vac/crates/vac-wasm/: Cargo.toml  package.json
vac/demo/: index.html  package-lock.json  package.json  tailwind.config.js
vac/demo/src/: App.tsx  index.css
vac/docs/: CLAIM_EXTRACTION.md  OSS_LAUNCH_RESEARCH.md  RESEARCH_SYNTHESIS.md
(+123 files in other folders)
