[workspace]
resolver = "2"
members = [
    "crates/aapi-core",
    "crates/aapi-crypto",
    "crates/aapi-indexdb",
    "crates/aapi-gateway",
    "crates/aapi-adapters",
    "crates/aapi-metarules",
    "crates/aapi-sdk",
    "crates/aapi-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AAPI Contributors"]
license = "Apache-2.0"
repository = "https://github.com/aapi-protocol/aapi"
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP/API
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono", "json"] }

# Validation & Schema
jsonschema = "0.18"
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Tracing & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Testing
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3.9"
assert-json-diff = "2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
