[workspace]
resolver = "2"
members = [
    "crates/vac-core",
    "crates/vac-prolly",
    "crates/vac-red",
    "crates/vac-crypto",
    "crates/vac-store",
    "crates/vac-sync",
    "crates/vac-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/vac"
authors = ["VAC Team"]

[workspace.dependencies]
# IPLD / Content Addressing
libipld = "0.16"
libipld-core = "0.16"
libipld-cbor = "0.16"
cid = { version = "0.11", features = ["serde"] }
multihash = { version = "0.19", features = ["serde"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Data structures
sprs = "0.11"  # Sparse matrices for RED
indexmap = "2.1"
dashmap = "5.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.4"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
