[workspace]
resolver = "2"
members = [
    "crates/vac-core",
    "crates/vac-prolly",
    "crates/vac-red",
    "crates/vac-crypto",
    "crates/vac-store",
    "crates/vac-sync",
    "crates/vac-wasm",
    "crates/vac-ffi",
    "crates/vac-bus",
    "crates/vac-cluster",
    "crates/vac-replicate",
    "crates/vac-route",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/GlobalSushrut/connector-oss"
authors = ["VAC Team"]

[workspace.dependencies]
# IPLD / Content Addressing
libipld = "0.16"
libipld-core = "0.16"
libipld-cbor = "0.16"
cid = { version = "0.11", features = ["serde"] }
multihash = { version = "0.19", features = ["serde"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Data structures
sprs = "0.11"  # Sparse matrices for RED
indexmap = "2.1"
dashmap = "5.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Validation / AAPI bridge
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
jsonschema = "0.18"
serde_with = "3.0"
hex = "0.4"

# Testing
proptest = "1.4"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
