[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "connector_oss"
version = "0.1.0"
description = "Tamper-proof memory and chain-of-custody for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["ai", "agents", "memory", "compliance", "hipaa", "audit", "llm", "trust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/GlobalSushrut/connector-oss"
Documentation = "https://github.com/GlobalSushrut/connector-oss/blob/main/docs/01_INDEX.md"
Repository = "https://github.com/GlobalSushrut/connector-oss"
"Bug Tracker" = "https://github.com/GlobalSushrut/connector-oss/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "maturin>=1.0"]

[tool.maturin]
# Points maturin at the vac-ffi crate which contains the PyO3 bindings
manifest-path = "../../vac/crates/vac-ffi/Cargo.toml"
python-source = "."
module-name = "connector_oss._internal"
features = ["pyo3/extension-module"]
