[package]
name = "aapi-cli"
description = "AAPI CLI - Command-line interface for AAPI Gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aapi"
path = "src/main.rs"

[dependencies]
aapi-core = { path = "../aapi-core" }
aapi-crypto = { path = "../aapi-crypto" }
aapi-sdk = { path = "../aapi-sdk" }
aapi-gateway = { path = "../aapi-gateway" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
