[package]
name = "aapi-crypto"
description = "AAPI Crypto - Ed25519 signing, capability tokens, and Merkle proofs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aapi-core = { path = "../aapi-core" }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
