[package]
name = "aapi-indexdb"
description = "AAPI IndexDB - Append-only evidence log with transparency features"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aapi-core = { path = "../aapi-core" }
aapi-crypto = { path = "../aapi-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
