[package]
name = "aapi-pipeline"
description = "AAPI Pipeline - Distributed VAKYA pipeline engine, saga rollback, and routing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aapi-core = { path = "../aapi-core" }
aapi-adapters = { path = "../aapi-adapters" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
