[package]
name = "aapi-sdk"
description = "AAPI SDK - Client library for interacting with AAPI Gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aapi-core = { path = "../aapi-core" }
aapi-crypto = { path = "../aapi-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
