[package]
name = "connector-napi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "NAPI-RS native Node.js bindings for Connector OSS"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS
napi = { version = "2", features = ["napi6", "serde-json"] }
napi-derive = "2"

# Connector crates
connector-api = { path = "../../../connector/crates/connector-api" }
connector-engine = { path = "../../../connector/crates/connector-engine" }
connector-protocol = { path = "../../../connector/crates/connector-protocol" }

# VAC kernel
vac-core = { path = "../../../vac/crates/vac-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = "0.4"

# Content addressing
cid = "0.11"

[build-dependencies]
napi-build = "2"
