[package]
name = "vac-bus"
description = "Event bus abstraction for distributed VAC replication"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }

[dependencies.async-nats]
version = "0.38"
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[features]
default = []
nats = ["async-nats", "futures"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
