[package]
name = "vac-cluster"
description = "Cell-based clustering for distributed VAC kernels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vac-core = { path = "../vac-core" }
vac-bus = { path = "../vac-bus" }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
cid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
vac-route = { path = "../vac-route" }
