[package]
name = "vac-core"
description = "Core types and traits for Vault Attestation Chain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libipld = { workspace = true }
libipld-core = { workspace = true }
libipld-cbor = { workspace = true }
cid = { workspace = true }
multihash = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
