[package]
name = "vac-ffi"
description = "Thin PyO3 bindings — exposes Connector, Agent, Pipeline to Python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "vac_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Connector API (the user-facing layer)
connector-api = { path = "../../../connector/crates/connector-api" }
connector-engine = { path = "../../../connector/crates/connector-engine" }

# VAC kernel (for direct kernel access)
vac-core = { path = "../vac-core" }

# FFI
pyo3 = { version = "0.22", features = ["extension-module"] }

# Shared
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
cid = { workspace = true }

[features]
default = ["pyo3/extension-module"]
